# mors

./: .env.example  .gitignore  CLOUDFLARE.md  PLAN.md  Procfile  README.md  TAILSCALE.md  clean_logs.sh  fetch_gym_data.py  main.py  pyproject.toml
gym_calendar/: config.py  ical.py  scraper.py
server/: Cargo.toml  justfile
server/src/: config.rs  ical.rs  main.rs  state.rs
server/src/routes/: calendar.rs  dashboard.rs  health.rs  mod.rs  refresh.rs
